--- a/public/admin.css
+++ b/public/admin.css
@@ -1,3 +1,7 @@
+:root {
+    --body-bg: transparent!important;
+}
+
 body {
     background-image: url('images/bg-01.jpg');
     background-size: cover;
