--- a/templates/forms/createUser.html.twig
+++ b/templates/forms/createUser.html.twig
@@ -7,6 +7,7 @@
         {{ form_start(form) }}
         {{ form_row(form.email) }}
         {{ form_row(form.password) }}
+        {{ form_row(form.isAdmin) }}
         <section class="content-footer">
             <div class="form-actions">
                 <button type="submit" class="btn btn-primary action-save">
